tests/purs/failing/OverlapAcrossModulesUnnamedInstance/X.purs
module OverlapAcrossModules.X where
import OverlapAcrossModules.Class
data X
instance C X y
